--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/mern-blog
+MONGO_URI=mongodb+srv://mehuljoshi070:7Z8SgYvBGYxr6SsU@blogdb.pvnlanh.mongodb.net/?retryWrites=true&w=majority&appName=blogdb
 JWT_SECRET=mehul-sess-key
 PORT=5000
